fix(ui): ensure that long lines wrap in device manager mozilla/fxa-content-server#5693), r=@vbudhram

--- a/packages/fxa-content-server/app/styles/modules/_settings.scss
+++ b/packages/fxa-content-server/app/styles/modules/_settings.scss
@@ -522,7 +522,7 @@ section.modal-panel {
   background-repeat: no-repeat;
   background-size: 32px 32px;
 
-  height: 40px;
+  min-height: 40px;
   list-style: none;
   margin: 10px 0;
   position: relative;
@@ -576,8 +576,13 @@ section.modal-panel {
   }
 
   .last-connected {
+    margin-right: 120px;
     color: $color-grey;
     font-size: 12px;
+
+    @include respond-to('small') {
+      max-width: 78%;
+    }
   }
 
   &[data-os='Windows'] {
